// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notify calls the success toast interface 1`] = `
Array [
  "A message",
  "success",
  3000,
  Object {},
]
`;

exports[`notify calls the warning toast interface 1`] = `
Array [
  "A message",
  "warning",
  3000,
  Object {},
]
`;
